fix ( positioning of the neo view did not make sense as a tab so wrapped them both )

--- a/app/pages/telescope-details/telescope-details.scss
+++ b/app/pages/telescope-details/telescope-details.scss
@@ -13,6 +13,10 @@
 
 .telescope-details {
 
+  .viewer-container {
+    position: relative;
+  }
+
   .ReactTabs__TabList {
     text-align: center;
     margin: 0;
